kubernetes-dev/do-dp-main-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: dataplane-main
  namespace: dataplane-dev
  labels:
    app: dataplane-main
spec:
  ports:
    - name: tcp
      protocol: TCP
      #      port = port connected to ingress
      port: 9000
      # targetPort = port on container
      targetPort: 9000
  selector:
    app: dataplane-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-main
  namespace: dataplane-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataplane-main
  template:
    metadata:
      labels:
        app: dataplane-main
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
      volumes:
        - name: dp-persistent-storage
          persistentVolumeClaim:
            claimName: dataplane-storage
      containers:
        - name: container
          image: registry.digitalocean.com/dataplane-dev/dataplane-main-dev:latest
          command:
            - "./dataplane"
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: dp-persistent-storage
              mountPath: /appdev/code-files
              subPath: code-files
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.01"
