kubernetes-dev/dp-worker-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: dataplane-worker
  namespace: dataplane-dev
  labels:
    app: dataplane-worker
spec:
  ports:
    - name: tcp
      protocol: TCP
      #      port = port connected to ingress
      port: 9005
      # targetPort = port on container
      targetPort: 9005
  selector:
    app: dataplane-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-worker
  namespace: dataplane-dev
spec:
  replicas: 4
  selector:
    matchLabels:
      app: dataplane-worker
  template:
    metadata:
      labels:
        app: dataplane-worker
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
      volumes:
        - name: dp-persistent-storage
          persistentVolumeClaim:
            claimName: dataplane-storage
      containers:
        - name: container
          image: dataplane/dataplane-worker-dev:latest
          command:
            - "./dataplane-worker"
          ports:
            - containerPort: 9005
          volumeMounts:
            - name: dp-persistent-storage
              mountPath: /appdev/code-files
              subPath: code-files
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.01"
