kubernetes-dev/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescaledb
  labels:
    app: timescaledb
spec:
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      # annotations:
      #   linkerd.io/inject: enabled
      labels:
        app: timescaledb
    spec:
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
      containers:
        - image: timescale/timescaledb:2.5.1-pg14
          name: container
          #          command: ["/bin/sh"]
          #          args: ["-c","postgres && sleep 30s && psql -d test_db --user=test_user -a -f restore.sql"]
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: timescaledb-persistent-storage
              mountPath: /var/lib/postgresql/data
              subPath: data
#          resources:
#            limits:
#              memory: "200Mi"
#              cpu: "0.2"
#            requests:
#              memory: "100Mi"
#              cpu: "0.1"
      volumes:
        - name: timescaledb-persistent-storage
          persistentVolumeClaim:
            claimName: timescaledb
---
kind: Service
apiVersion: v1
metadata:
  name: timescaledb-service
  namespace: default
  labels:
    app: timescaledb
spec:
  ports:
    - name: http
      protocol: TCP
      #      port = port connected to ingress
      port: 5432
      # targetPort = port on container
      targetPort: 5432
  selector:
    app: timescaledb
