kubernetes-dev/worker-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: dataplane-worker
  namespace: default
  labels:
    app: dataplane-worker
spec:
  ports:
    - name: tcp
      protocol: TCP
      #      port = port connected to ingress
      port: 9005
      # targetPort = port on container
      targetPort: 9005
  selector:
    app: dataplane-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: dataplane-worker
  template:
    metadata:
      labels:
        app: dataplane-worker
    spec:
      containers:
        - name: container
          image: dataplane/dataplane-worker:latest
          command:
            - "./nats-server"
            - "--debug"
            - "--cluster"
            - "nats://0.0.0.0:6222"
            - "--http_port"
            - "8222"
            - "--port"
            - "4222"
          ports:
            - containerPort: 9005
